  potential singularity problems. 
  
  .. note:: This means that the data in these temporary files can not easily be interpreted from a clinical 
     point of view. Create your own output files with physiological joint angles if you need to export that data.
* 

**Removed:**

* Removed unused support files for muscle contact. ``Tools/ModelUtilities/ContactMuscles/*``


**Added:**

* Added a new option to optimize "head width" / "head depth" / "neck length" / "Tibia torsion" / 
  "hand breadth" as part of the ``OptimizeAnthropometricsOnOff`` class_template in the AnyMoCap framework. 

* Added new rotation vector based measures in the interface folder for the arm degrees of freedom.
  These measures (``Interface.Right.RotVectorMeasures.*```) for joint angles do not have a clinical
  meaning but are use full when exporting and importing joint angles. 

* Added a new :ammr:bm_statement:`option for setting custom muscle calibration <BM_CALIBRATION_TYPE>`. 
  I.e. a option which disables calibration so the user can add their own code. 

  .. code-block:: AnyScriptDoc

    #define BM_CALIBRATION_TYPE _CALIBRATION_TYPE_CUSTOM_
    
    #include "<ANYBODY_PATH_BODY>\HumanModel.any"
      
    // Manually include calibration code.
    Main.HumanModel.Calibration = {
      #include "<ANYBODY_PATH_BODY>/LegTLEM/Calibration/CalibrationSequenceRight.any"
      #include "<ANYBODY_PATH_BODY>/LegTLEM/Calibration/CalibrationSequenceLeft.any"
      #include "<ANYBODY_PATH_BODY>/Arm/Calibration/CalibrationSequenceRight.any"
      #include "<ANYBODY_PATH_BODY>/Arm/Calibration/CalibrationSequenceLeft.any"
    };

  .. note:: If you need to modify the calibration code, copy it to the application folder and include it from there.




**************************
AMMR 2.2.3 (2019-11-13)
**************************

.. image:: https://zenodo.org/badge/DOI/10.5281/zenodo.3521521.svg
  :target: https://doi.org/10.5281/zenodo.3521521

**Added:**
 