@@ -59,6 +59,13 @@ AMMR beta
 
 **Added:**
 
+* Added a new Full Body :ref:`"ADL Gait" <sphx_glr_auto_examples_MoCap_plot_ADL_Gait.py>` MoCap 
+  Example based on the "Rehazenter Adult Walking Dataset" by `Schreiber and Moissenet (2019) <https://doi.org/10.1038/s41597-019-0124-4>`__.
+  The model is configured to run all 50 subjects and 1145 trials in the data set. However, you must 
+  download the actual data separately from 
+  `FigShare <https://figshare.com/articles/A_multimodal_dataset_of_human_gait_at_different_walking_speeds/7734767>`__
+  where it is hosted under a Creative Commons license.
+
 * Added a new option to optimize "head width" / "head depth" / "neck length" / "Tibia torsion" / 
   "hand breadth" as part of the ``OptimizeAnthropometricsOnOff`` class_template in the AnyMoCap framework. 
 
